@@ -1,3 +1,8 @@
+2005-01-24  Bruno Haible  <bruno@clisp.org>
+
+	* defpackage.lisp (defpackage): Let :case-sensitive and :case-inverted
+	options override the default provided by :modern.
+
 2005-01-24  Sam Steingold  <sds@gnu.org>
 
 	* modules/bindings/glibc/linux.lisp, modules/bindings/win32/win32.lisp:
